solution ---kata 4, and I added MOVIES CORN24 to every kata